# __2026_05_09_chihlee_python__

./: clac.spec  pyproject.toml
05_09/: 2026_05_09_01.ipynb  2026_05_09_03.ipynb  2026_05_09_04.ipynb
05_16/: lesson1.py
05_23/: lesson1.ipynb
05_30/: lesson1.ipynb  lesson5.ipynb
06_06/: lesson3_1.py  report.py
06_13/: lesson3.ipynb  lesson3_1.ipynb
06_27/: clac.py  lesson1.ipynb  lesson2.md  lesson3.ipynb  pdf_to_excel.py  xlsx_to_csv.py
06_27/生成/: read.py  test_read.py  整理後_電話表.csv  整理後_電話表_直式.csv
link/: README.md
