[project]
name = "2026-05-09-chihlee-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "pyinstaller>=6.21.0",
    "reportlab>=4.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]
